--- a/index.html
+++ b/index.html
@@ -160,8 +160,6 @@ layout: false
 
   - 4 februari 2013
 
-  - Arjan Verkerk
-  
   - Flask + OpenLayers
   
   - geoserver + threedi-wms
@@ -238,6 +236,28 @@ layout: false
 
 ---
 
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+## Verleden
+]
+.right-column[
+In een notedop en de rekenkern buiten beschouwing latende, wat is er in de eerste jaren zoal gebeurd?
+
+  - redis als centrale state store
+
+  - eerst 1 rekensom tegelijk per website (reserveren)
+
+  - live.3di.lizard.net / test.live.3di.lizard.net
+
+  - hhnk.3di.lizard.net / delfland.3di.lizard.net
+
+  - eerste versie QGis plugin
+
+]
+
+---
+
 name: inverse
 layout: true
 class: center, middle, inverse
@@ -255,7 +275,7 @@ layout: false
   ## Heden
 ]
 .right-column[
-  ## Wat is er veranderd? [1]
+  ## Wat is er nog meer veranderd? [1]
 
   - modellen bevatten veel meer informatie
 
@@ -275,7 +295,7 @@ layout: false
 
   - testbank / test protocol / unit tests
 
-  - schaalbaarheid van berekeningen (Apache Mesos)
+  - schaalbaarheid van berekeningen (met Docker en Apache Mesos)
 
 ]
 
@@ -288,15 +308,13 @@ layout: false
   ## Heden
 ]
 .right-column[
-  ## Wat is er veranderd? [2]
+  ## Wat is er nog meer veranderd? [2]
 
   - aparte services op verschillende servers
 
   - horizontaal schaalbaar
 
   - gescripte deployments (met Ansible)
-
-  - 3Di kennisuurtje
 
   - monorepo
 
