--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ layout: false
 
   - resultaat verwerking
 
-  - heel veel web interface verbeteringen
+  - frontend UI verbeteringen
 
   - testbank / test protocol / unit tests
 
@@ -328,6 +328,8 @@ layout: false
 
   - resultaten in Lizard
 
+  - permissions backend + API
+
 ]
 
 ---
@@ -358,320 +360,360 @@ layout: false
 ## Heden
 ]
 .right-column[
-## Services (hoofd)
+
+## Frontend / web / socket servers (2x)
+![load_model_popup](./img/load_model_popup.png)
 
 ]
 
 ---
 
+layout: false
 .left-column[
-  ## What is it?
-  ## Why use it?
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-If your ideal slideshow creation workflow contains any of the following steps:
 
-- Just write what's on your mind
+## Frontend / web / socket servers (2x)
+![load_model_popup_inpy_api](./img/load_model_popup_inpy_api.png)
 
-- Do some basic styling
-
-- Easily collaborate with others
-
-- Share with and show to everyone
-
-Then remark might be perfect for your next.red[*] slideshow!
-
-.footnote[.red[*] You probably want to convert existing slideshows as well]
 ]
+
 ---
+
+layout: false
 .left-column[
-  ## What is it?
-  ## Why use it?
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-As the slideshow is expressed using Markdown, you may:
 
-- Focus on the content, expressing yourself in next to plain text not worrying what flashy graphics and disturbing effects to put where
+## Modellen databank
+![model_databank](./img/model_databank.png)
 
-As the slideshow is actually an HTML document, you may:
-
-- Display it in any decent browser
-
-- Style it using regular CSS, just like any other HTML content
-
-- Use it offline!
-
-As the slideshow is contained in a plain file, you may:
-
-- Store it wherever you like; on your computer, hosted from your Dropbox, hosted on Github Pages alongside the stuff you're presenting...
-
-- Easily collaborate with others, keeping track of changes using your favourite SCM tool, like Git or Mercurial
 ]
----
-template: inverse
 
-## How does it work, then?
 ---
-name: how
 
+layout: false
 .left-column[
-  ## How does it work?
-### - Markdown
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-A Markdown-formatted chunk of text is transformed into individual slides by JavaScript running in the browser:
 
-```remark
-# Slide 1
-This is slide 1
+## Modellen databank
+![model_databank_commits](./img/model_databank_commits.png)
+
+]
 
 ---
 
-# Slide 2
-This is slide 2
-```
-
-.slides[
-  .first[
-  ### Slide 1
-  This is slide 1
-  ]
-  .second[
-  ### Slide 2
-  This is slide 2
-  ]
-]
-
-Regular Markdown rules apply with only a single exception:
-
-  - A line containing three dashes constitutes a new slide
-  (not a horizontal rule, `&lt;hr /&gt;`)
-
-Have a look at the [Markdown website](http://daringfireball.net/projects/markdown/) if you're not familiar with Markdown formatting.
-]
----
+layout: false
 .left-column[
-  ## How does it work?
-  ### - Markdown
-  ### - Inside HTML
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-A simple HTML document is needed for hosting the styles, Markdown and the generated slides themselves:
 
-```xml
-<!DOCTYPE html>
-<html>
-  <head>
-    <style type="text/css">
-      /* Slideshow styles */
-    </style>
-  </head>
-  <body>
-*    <textarea id="source">
-      <!-- Slideshow Markdown -->
-    &lt;/textarea&gt;
-*    <script src="remark.js">
-    </script>
-    <script>
-*      var slideshow = remark.create();
-    </script>
-  </body>
-</html>
-```
+## Inpy (task/celery en api servers)
+![inpy](./img/inpy.png)
 
-You may download remark to have your slideshow not depend on any online resources, or reference the [latest version](http://remarkjs.com/downloads/remark-latest.min.js) online directly.
 ]
----
-template: inverse
 
-## Of course, Markdown can only go so far.
 ---
+
+
+layout: false
 .left-column[
-  ## Markdown extensions
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-To help out with slide layout and formatting, a few Markdown extensions have been included:
 
-- Slide properties, for naming, styling and templating slides
+## Inpy (task/celery en api servers)
+![inpy_logging](./img/inpy_logging.png)
 
-- Content classes, for styling specific content
-
-- Syntax highlighting, supporting a range of languages
 ]
 
 ---
+
+layout: false
 .left-column[
-  ## Markdown extensions
-  ### - Slide properties
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Initial lines containing key-value pairs are extracted as slide properties:
 
-```remark
-name: agenda
-class: middle, center
+## Inpy (task/celery en api servers)
+![inpy_visible_arrow](./img/inpy_visible_arrow.png)
 
-# Agenda
-
-The name of this slide is {{ name }}.
-```
-
-Slide properties serve multiple purposes:
-
-* Naming and styling slides using properties `name` and `class`
-
-* Using slides as templates using properties `template` and `layout`
-
-* Expansion of `{{ property }}` expressions to property values
-
-See the [complete list](https://github.com/gnab/remark/wiki/Markdown#slide-properties) of slide properties.
 ]
+
 ---
+
+layout: false
 .left-column[
-  ## Markdown extensions
-  ### - Slide properties
-  ### - Content classes
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Any occurences of one or more dotted CSS class names followed by square brackets are replaced with the contents of the brackets with the specified classes applied:
 
-```remark
-.footnote[.red.bold[*] Important footnote]
-```
+## Frontend / web / socket servers (2x)
+![load_model_popup_choose_model](./img/load_model_popup_choose_model.png)
 
-Resulting HTML extract:
-
-```xml
-<span class="footnote">
-  <span class="red bold">*</span> Important footnote
-</span>
-```
 ]
+
 ---
+
+layout: false
 .left-column[
-  ## Markdown extensions
-  ### - Slide properties
-  ### - Content classes
-  ### - Syntax Highlighting
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Code blocks can be syntax highlighted by specifying a language from the set of [supported languages](https://github.com/gnab/remark/wiki/Configuration#highlighting).
 
-Using [GFM](http://github.github.com/github-flavored-markdown/) fenced code blocks you can easily specify highlighting language:
+## Wat gebeurt er na kiezen van een model?
 
-.pull-left[
+- Na kiezen model er gekeken of er nog sessies vrij zijn voor de gekozen organisatie.
 
-<pre><code>```javascript
-function add(a, b)
-  return a + b
-end
-```</code></pre>
-]
-.pull-right[
+- Zo ja, dan wordt er een POST gedaan naar de machine-manager service.
 
-<pre><code>```ruby
-def add(a, b)
-  a + b
-end
-```</code></pre>
-]
+- De machine-manager doet een POST naar Marathon.
 
-A number of highlighting [styles](https://github.com/gnab/remark/wiki/Configuration#highlighting) are available, including several well-known themes from different editors and IDEs.
+- Marathon start vervolgens een docker rekenkern container met de juiste env vars (met name SUBGRID_ID) op in het Mesos cluster.
+
+- En gedurende alle stappen wordt redis geupdate met de actuele toestand / state.
 
 ]
+
 ---
+
+layout: false
 .left-column[
-  ## Presenter mode
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-To help out with giving presentations, a presenter mode comprising the
-following features is provided:
 
-- Display of slide notes for the current slide, to help you remember
-  key points
+## Starten docker / initialisatie rekenkern
+![loading_model](./img/loading_model.png)
 
-- Display of upcoming slide, to let you know what's coming
-
-- Cloning of slideshow for viewing on extended display
 ]
+
 ---
+
+layout: false
 .left-column[
-  ## Presenter mode
-  ### - Inline notes
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Just like three dashes separate slides,
-three question marks separate slide content from slide notes:
 
-```
-Slide 1 content
+## Klaar om te rekenen
+![loaded_model](./img/loaded_model.png)
 
-*???
-
-Slide 1 notes
-
----
-
-Slide 2 content
-
-*???
-
-Slide 2 notes
-```
-
-Slide notes are also treated as Markdown, and will be converted in the
-same manner slide content is.
-
-Pressing __P__ will toggle presenter mode.
 ]
-???
-Congratulations, you just toggled presenter mode!
 
-Now press __P__ to toggle it back off.
 ---
+
+layout: false
 .left-column[
-  ## Presenter mode
-  ### - Inline notes
-  ### - Cloned view
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Presenter mode of course makes no sense to the audience.
 
-Creating a cloned view of your slideshow lets you:
+## Rekenen
+![run_simulation](./img/run_simulation.png)
 
-- Move the cloned view to the extended display visible to the audience
-
-- Put the original slideshow in presenter mode
-
-- Navigate as usual, and the cloned view will automatically keep up with the original
-
-Pressing __C__ will open a cloned view of the current slideshow in a new
-browser window.
 ]
----
-template: inverse
 
-## It's time to get started!
 ---
+
+layout: false
 .left-column[
-  ## Getting started
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
 ]
 .right-column[
-Getting up and running is done in only a few steps:
 
-1. Visit the [project site](http://github.com/gnab/remark)
+## Marathon
+![marathon](./img/marathon.png)
 
-2. Follow the steps in the Getting Started section
-
-For more information on using remark, please check out the [wiki](https://github.com/gnab/remark/wiki) pages.
 ]
+
 ---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Mesos
+![mesos](./img/mesos.png)
+
+]
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Mesos
+![mesos_slaves](./img/mesos_slaves.png)
+
+]
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Resultaat opslaan (threedi-result / lizard)
+![process_results](./img/process_results_arrow.png)
+
+]
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Resultaat opslaan (threedi-result / lizard)
+![lizard_result](./img/lizard_result.png)
+
+]
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Headless API
+![headless](./img/headless.png)
+
+]
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+]
+.right-column[
+
+## Headless API
+![headless_example](./img/headless_example.png)
+
+]
+
+---
+
+name: inverse
+layout: true
+class: center, middle, inverse
+
+---
+![3di_logo](./img/3di-logo.png)
+# Toekomst
+
+---
+
+layout: false
+.left-column[
+![3di_logo](./img/3di-logo.png)
+  
+## Verleden
+## Heden
+## Toekomst
+]
+.right-column[
+
+## Enkele ideeën voor de toekomst
+
+- bijhouden hoeveel resources (CPU / memory) een model echt gebruikt en daar de reken container mee starten, want
+
+- hierdoor maak je efficiënter gebruik van je resources = goedkoper
+
+- headless geschikt maken voor operationeel gebruik / alarmeringen
+
+- dashboard voor headless API
+
+- dynamisch bijschalen van Mesos slaves
+
+- verbeteren feedback naar eindgebruiker (logging, error messages, etc.)
+
+- uitbreiden QGis plugin functionaliteit
+
+]
+
+---
+
 name: last-page
 template: inverse
+class: center, middle, inverse
 
-## That's all folks (for now)!
+![3di_logo](./img/3di-logo.png)
+# Vragen?
 
-Slideshow created using [remark](http://github.com/gnab/remark).
+presentatie gemaakt met [remark](http://github.com/gnab/remark)
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
