--- a/index.html
+++ b/index.html
@@ -692,7 +692,9 @@ layout: false
 
 - hierdoor maak je efficiënter gebruik van je resources = goedkoper
 
-- headless geschikt maken voor operationeel gebruik / alarmeringen
+- live resultaten niet meer serveren vanuit de docker container maar door een externe service (?)
+
+- headless geschikt maken voor operationeel gebruik / alarmeringen i.c.m. Lizard
 
 - dashboard voor headless API
 
