Move remark.language.js to the js sub-directory.

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ presentatie gemaakt met [remark](http://github.com/gnab/remark)
     <script>
       var hljs = remark.highlighter.engine;
     </script>
-    <script src="remark.language.js"></script>
+    <script src="js/remark.language.js"></script>
     <script>
       var slideshow = remark.create({
           highlightStyle: 'monokai',
